# self-evolving-agent

./: .gitignore  README.md  netlify.toml  package-lock.json  package.json  playwright.config.mjs  pyproject.toml  pyrightconfig.json
curriculum/: Function-contract-study-workflow.md  Harness Engineering curriculum - rewritten.md  LESSON-AUTHORING-STANDARD.md  Lesson-study-workflow.md  MISSION.md  NOTES.md  RESOURCES.md  TEACHING-ORCHESTRATION.md  explainer.py  learning-flow.json  learning_flow.py  learning_state.py  review.html  study_server.py
curriculum/assets/: agent-trace-lab.css  agent-trace-lab.js  course.css  lesson.js  study.css  study.js
curriculum/e2e/: study-workspace.spec.mjs
curriculum/learning-records/: 0001-ready-for-agent-loop.md  0002-agent-loop-contract.md  0003-role-ready-html-lesson-standard.md
curriculum/lessons/: 0001-agent-loop-from-first-principles.html  0001-model-call-primitive.html  0002-message-state-primitive.html  0002-model-complete-boundary.html  0003-manual-tool-protocol.html  0004-schema-validation.html  0005-sandboxed-file-tools.html  0006-agent-loop-primitive.html  0007-trace-logger.html  0008-agent-loop-primitive.html  0008-eval-runner.html  0010-eval-runner.html
curriculum/phase-0/: test_run.py
docs/: learning-system-implementation-plan.md  learning-system.md  readiness_check.md  remote-study-workspace.md
scripts/: test_run.py
site/: index.html  learning-flow.json  study-workflow.html
tools/: build-explainer  build_lessons_site.py  fetch-study-notes  lint_lessons.py  prove-lesson  record-learning  study-context
(+82 files in other folders)
