[project]
name = "self-evolving-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0.0",
    "pyright>=1.1.410",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["curriculum/phase-1", "curriculum/phase-1/01_model_call", "curriculum/phase-1/03_parse_tool_request", "curriculum/phase-1/04_validate_tool_args"]

[tool.ruff.lint]
fixable = []
